# clothoid-rs

./: Cargo.toml  README.md  Taskfile.dist.yaml
.github/workflows/: rust.yml
examples/: interactive_demo.rs  simple.rs
src/: fit.rs  lib.rs  optimizer.rs  path_traits_impls.rs
src/optimizer/: angle.rs  cmaes.rs  integrate.rs  linalg.rs  nelder_mead.rs  objective.rs  path.rs  pose.rs  rng.rs  solver.rs  state.rs
src/path_traits_impls/: arc.rs  linear.rs  multi.rs  primitive.rs  project.rs  segment.rs
