[package]
name = "clothoid"
version = "0.1.0"
edition = "2024"
description = "Compute and fit clothoid (Euler/Cornu spiral) curves for smooth path planning and trajectory generation"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
license = "EUPL-1.2"
repository = "https://github.com/sunsided/clothoid-rs"
keywords = ["clothoid", "euler-spiral", "path-planning", "fresnel", "trajectory"]
categories = ["algorithms", "mathematics", "science::robotics"]

[features]
default = []
fresnel = ["dep:fresnel"]

[dependencies]
fresnel = { version = "0.1.0", optional = true }

[dev-dependencies]
assert_float_eq = "1.1.3"
winit = "0.30"
softbuffer = "0.4"
tiny-skia = "0.11"
