[package]
name = "clothoid"
version = "0.1.0"
edition = "2024"
description = "Compute and fit clothoid (Euler/Cornu spiral) curves for smooth path planning and trajectory generation"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
license = "EUPL-1.2"
repository = "https://github.com/sunsided/clothoid-rs"
keywords = ["clothoid", "euler-spiral", "path-planning", "fresnel", "trajectory"]
categories = ["algorithms", "mathematics", "science::robotics"]

[features]
## Default features: both optimizers and path-traits integration.
default = ["optimizers", "path-traits"]

## Fresnel integral computation via the `fresnel` crate.
fresnel = ["dep:fresnel"]

## Umbrella: enables both solvers + the fit module.
optimizers = ["nelder-mead", "cma-es"]

## Nelder-Mead simplex optimizer.
nelder-mead = []

## CMA-ES (Covariance Matrix Adaptation Evolution Strategy) optimizer.
cma-es = []

## path-traits integration: exposes ClothoidArc, LinearSegment, ClothoidPath
## as first-class path_traits::Path implementations.
path-traits = ["dep:path-traits"]

[[example]]
name = "interactive_demo"
required-features = ["nelder-mead", "cma-es"]

[dependencies]
fresnel = { version = "0.1.0", optional = true }
path-traits = { version = "0.1.0", optional = true }

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
assert_float_eq = "1.1.3"
winit = "0.30"
softbuffer = "0.4"
tiny-skia = "0.11"
